# com.github.xpol-lua-rapidjson

./: CMakeLists.txt  build_artifact.py  dependency-log-lua5.1.xml  dependency-log-lua5.4.xml
jonchki/: install.py
lua-rapidjson/: CMakeLists.txt  __README__.txt
lua-rapidjson/installer/lua5.1/: lua-rapidjson.xml  rapidjson.xml
lua-rapidjson/installer/lua5.4/: lua-rapidjson.xml  rapidjson.xml
lua-rapidjson/patches/: 001_remove_march_native.diff
